@@ -234,7 +234,7 @@ class LoopFlowViolationCostEvaluatorTest {
 
         List<FlowCnec> costlyElements = evaluator.evaluate(currentLoopFlows, null).getCostlyElements(Set.of(), Set.of());
         assertEquals(2, costlyElements.size());
-        assertSame(cnec1, costlyElements.get(0));
+        assertSame(cnec1, costlyElements.getFirst());
         assertSame(cnec2, costlyElements.get(1));
     }
 
@@ -257,6 +257,6 @@ class LoopFlowViolationCostEvaluatorTest {
 
         List<FlowCnec> costlyElements = evaluator.evaluate(currentLoopFlows, null).getCostlyElements(Set.of(), Set.of());
         assertEquals(1, costlyElements.size());
-        assertSame(cnec2, costlyElements.get(0));
+        assertSame(cnec2, costlyElements.getFirst());
     }
 }
